# ipod-core

./: .gitignore  PLAN.md  README.md  STATUS.md
core/: .editorconfig  .gitignore  LICENSE  Makefile  README.md  meson.build  meson_options.txt
core/apps/audio/: engine.c  engine.h  meson.build
core/apps/db/: meson.build  tagcache.c  tagcache.h  tagcache_format.h
core/apps/ui/: art_cache.c  art_cache.h  atlas.c  atlas.h  cabinet.c  cabinet.h  chrome.c  chrome.h  list.c  list.h  meson.build  now_playing.c  now_playing.h  search.c  search.h  theme.c  theme.h  thumb_cache.c  thumb_cache.h
core/apps/ui/atlas/: nunito_bold_11.h  nunito_regular_11.h
core/boot/: crt0.S  linker.ld  meson.build
core/cli/: README.md  go.mod  go.sum
core/cli/cmd/core/: main.go
core/cli/internal/artistart/: cache.go  deezer.go  fetch.go  fetch_smoke_test.go  process.go
core/cli/internal/cli/: build.go  debug.go  firmware.go  flash.go  info.go  install.go  recover.go  release.go  root.go  sim.go  tagcache.go  test.go  update.go
core/cli/internal/firmware/: checksum.go  checksum_test.go  imageheader.go  imageheader_test.go  ipodfile.go  ipodfile_test.go
core/cli/internal/ipod/: detect.go  detect_stub.go  detect_test.go
core/cli/internal/tagcache/: decode.go  encode.go  format.go  roundtrip_test.go  scan.go  scan_test.go  strings.go
core/cli/internal/version/: version.go
core/codecs/: README.md  arena.c  arena.h  decoder.h  diskbuf.c  diskbuf.h  flac_meta.c  flac_meta.h  meson.build  readahead.c  readahead.h  tags.h
core/codecs/dr_flac/: LICENSE  flac.c  flac.h  tag_flac.c  tag_flac.h  vendor.sh
core/codecs/dr_mp3/: LICENSE  mp3.c  mp3.h  tag_mp3.c  tag_mp3.h  vendor.sh
core/codecs/stb_image/: LICENSE  image.c  image.h  vendor.sh
core/cross/: arm-none-eabi.txt
core/docs/design/: settings-persistence.md
core/docs/hw/: 01-soc-pp5022.md  02-lcd.md  03-clickwheel.md  04-ata.md  05-audio.md  06-power.md  07-usb.md  08-boot-dock.md  09-i2c.md  README.md
core/fs/: fat32.c  fat32.h  meson.build
core/hal/: hal.h  meson.build
core/hal/hw/: ata.c  ata.h  audio.c  audio.h  backlight.c  backlight.h  battery.c  battery.h  clickwheel.c  clickwheel.h  dma.c  dma.h  i2c.c  i2c.h  i2s.c  i2s.h  lcd.c  lcd.h  meson.build  mmio.h  piezo.c  piezo.h  power.c  power.h  pp5022.h  uart.c  uart.h  volume.c  volume.h  wm8758.c  wm8758.h
core/hal/sim/: meson.build  sim_hal.c
core/kernel/: cache.c  cache.h  clock.c  clock.h  console.c  console.h  irq.c  irq.h  main.c  meson.build  pcm_ring.c  pcm_ring.h  sched.c  sched.h  switch.S  timer.c  timer.h
core/lib/: mem.c  mem.h  meson.build
core/player/: player.c  player.h
core/sim/: main.c  meson.build
core/tests/: codec_kat.c  meson.build  sim_audio_playback.c  tag_mp3_test.c  tcdb_reader_test.c
core/tests/codec-vectors/: sine_440hz_1s_44k_s16_stereo.flac  sine_440hz_1s_44k_s16_stereo.flac.sha256  sine_440hz_1s_44k_s16_stereo.pcm  sine_440hz_1s_44k_s16_stereo.pcm.sha256  sine_440hz_1s_44k_s16_stereo_128k.mp3.ref.pcm  sine_440hz_1s_44k_s16_stereo_128k.mp3.ref.pcm.sha256  sine_440hz_1s_44k_s16_stereo_128k.mp3.sha256
core/tests/codecs/: diskbuf_test.c  flac_freestanding_test.c  flac_meta_test.c  mp3_freestanding_test.c  readahead_test.c
core/tests/fs/: fat32_test.c
core/tests/hw_audio/: audio_trace_test.c
core/tests/hw_clickwheel/: clickwheel_test.c
core/tests/hw_clock/: clock_test.c
core/tests/hw_console/: console_test.c
core/tests/hw_mmio/: backlight_trace_test.c  battery_trace_test.c  lcd_present_test.c  lcd_trace_test.c  mmio_mock.c  mmio_mock.h  trace_expect.h  uart_trace_test.c  volume_trace_test.c
core/tests/hw_sched/: sched_test.c  sched_test_mocks.c
core/tests/hw_timer/: timer_test.c  timer_test_stubs.c
core/tests/kernel/: pcm_ring_test.c
core/tests/scripts/: capture_mp3_ref.c  check_hw_consistency.py  check_hw_layout.sh  gen_codec_vectors.py  gen_codec_vectors.sh  make_fat32_image.py
core/tests/ui/: settings_test.c  text_test.c  thumb_test.c
core/tools/: icon_gen.sh
core/ui/: artcache.c  artcache.h  atlas.h  palette.c  palette.h  screen_charging.c  screen_charging.h  screen_settings.c  settings.c  settings.h  text.c  text.h  thumb.c  thumb.h
core/ui/atlas/: glyphmap.h  nunito_bold_11.h  nunito_bold_13.h  nunito_bold_17.h  nunito_bold_9.h  nunito_regular_11.h  nunito_regular_13.h  nunito_regular_9.h
design_handoff_rockbox_theme/: README.md  collection-detail.jsx  themes.jsx
design_reference/: README.md  Rockbox Theme.html  interactive-ipod.jsx  ipod-frame.jsx  menus.jsx  system-screens.jsx  volume-demo.jsx
docs/screens/: render.py
plugin/: cabinet.c
scratchpad/: architecture-review.md  battery-power-dig.md  freeze-twitch-diagnosis.md  mp3-fixedpoint-dig.md
theme/: README.txt
theme/.rockbox/fonts/: nunito-10.fnt  nunito-13-bold.fnt  nunito-13.fnt  nunito-14-bold.fnt
tools/: README.md  atlas_gen.py  atlas_gen.sh  build_index.py  coreart.py  gen_bitmaps.py  gen_bitmaps_svg.py  headless_drive.sh  install_deps.sh  render_index.py  test_plugin.sh
tools/fonts-out/: nunito-10-bold.fnt  nunito-10-extrabold.fnt  nunito-10-medium.fnt  nunito-10-regular.fnt  nunito-10-semibold.fnt  nunito-11-bold.fnt  nunito-11-extrabold.fnt  nunito-11-medium.fnt  nunito-11-regular.fnt  nunito-11-semibold.fnt  nunito-13-bold.fnt  nunito-13-extrabold.fnt  nunito-13-medium.fnt  nunito-13-regular.fnt  nunito-13-semibold.fnt  nunito-14-bold.fnt  nunito-14-extrabold.fnt  nunito-14-medium.fnt  nunito-14-regular.fnt  nunito-14-semibold.fnt  nunito-17-bold.fnt  nunito-17-extrabold.fnt  nunito-17-medium.fnt  nunito-17-regular.fnt  nunito-17-semibold.fnt  nunito-9-bold.fnt  nunito-9-extrabold.fnt  nunito-9-medium.fnt  nunito-9-regular.fnt  nunito-9-semibold.fnt
tools/fonts-src/: nunito.css
